# where-did-the-time-go

./: .gitignore  .prettierignore  AGENTS.md  BUILD.md  BUILD_RELEASE.md  PACKAGE_CHECKLIST.md  PROJECT_PROGRESS.md  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  test-report.md  vitest.config.ts
.github/workflows/: build.yml  test.yml
docs/: api-reference.md  architecture.md  database-design.md  requirements.md  tech-stack.md
scripts/: generate_icons.py  test.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  project_commands.rs  timer_commands.rs  water_commands.rs
src-tauri/src/models/: mod.rs  project.rs  time_record.rs
src-tauri/src/services/: database.rs  mod.rs  timer.rs
src-tauri/src/utils/: error.rs  mod.rs
src/components/: Button.test.tsx  Button.tsx  FloatingBall.tsx
src/stores/: projectStore.test.ts  projectStore.ts  timerStore.test.ts  timerStore.ts  waterStore.ts
src/styles/: index.css
src/test/: setup.ts
src/utils/: cn.test.ts
